--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -19,9 +19,11 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
 
 <body>
-<div id="root"></div>
+<!-- <div id="root"></div> -->
 <script type="module">
-const rootElement = document.getElementById('root')
+// const rootElement = document.getElementById('root')
+const rootElement = document.createElement('root')
+document.body.append(rootElement)
 const newElement = document.createElement('div')
 newElement.textContent = "Some Hello Text"
 newElement.className = "container"
