--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,6 +23,7 @@
 <script type="module">
 // const rootElement = document.getElementById('root')
 const rootElement = document.createElement('root')
+rootElement.setAttribute("id", "root")
 document.body.append(rootElement)
 const newElement = document.createElement('div')
 newElement.textContent = "Some Hello Text"
