--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -7,18 +7,17 @@
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
 
-
+<!-- Enter Javascript land -->
   <script type="text/babel">
     // 🐨 on the script tag above, change from `type="module"`
     // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
     // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
 
-    const hello= "Hello";
-    const world = " World!";
-    // Extra stuff
-    const greet = `${hello} ${world}`; 
-   // const element1 = <div className="container">Hello World</div>
-   const element1 = <div className="container">{greet}</div>
+    // // Extra stuff
+    const greet = 'Hello wordlidworld';
+    const myClassName= 'container'
+    
+   const element1 = <div className={myClassName}>{greet}</div>
     ReactDOM.createRoot(document.getElementById('root')).render(element1)
   </script>
 </body>
