Spreading props using the JSX syntax {... }

--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -16,8 +16,15 @@
     // // Extra stuff
     const greet = 'Hello wordlidworld';
     const myClassName= 'container'
-    
-   const element1 = <div className={myClassName}>{greet}</div>
+
+    // Extra credit spread props
+    const props={children: greet, className: myClassName}
+    const element1 = <div {...props}/>
+    console.log(props)
+   
+   // const element1 = <div className={myClassName}>{greet}</div>
     ReactDOM.createRoot(document.getElementById('root')).render(element1)
   </script>
 </body>
+
+
