--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -9,16 +9,24 @@
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
-    // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    function message({children}){
+      return <div className= "message">{children}</div>
+    }
+
+// Step two: 
+// const helloElement =  React.createElement(message, {children: "Hello there beutiful"})
+// console.log('--------_>', helloElement)
+
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+       {React.createElement(message, {children: "Hello there beutiful"})}
+       {React.createElement(message, {children: "Goodbye World"})}
       </div>
     )
 
+
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
-    ReactDOM.createRoot(document.getElementById('root')).render(element)
+     ReactDOM.createRoot(document.getElementById('root')).render(element)
+   
   </script>
 </body>
