--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,27 +6,69 @@
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
+    
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    // function message({children}){
+    //   return <div className= "message">{children}</div>
+    // }
 
-    function message({children}){
-      return <div className= "message">{children}</div>
-    }
+    // 💯 Runtime validation with PropTypes
+
+    // const PropTypes = {
+    //   string(props, propName, componentName){
+    //     const type = typeof props[propName]
+    //     if(type !== "string"){
+    //       return new Error(`yo, not cool. ${componentName} needs the prop ${propName} to be a string but it is ${typeof props[propName]}`
+    //       )
+    //     }
+    //   }
+    // }
+
+  function Message({subject, greeting}) {
+  return (
+    <div className="message">
+      {greeting}, {subject}
+    </div>
+  )
+}
+// Message.propTypes = {
+// subject: PropTypes.string, 
+// greeting: PropTypes.string
+
+// }
+
+// Alternative: Use a npm/ script - Typescript will help with this too 
+Message.propTypes = {
+  subject: PropTypes.string.isRequired,
+  greeting: PropTypes.string.isRequired,
+
+}
+
 
 // Step two: 
 // const helloElement =  React.createElement(message, {children: "Hello there beutiful"})
 // console.log('--------_>', helloElement)
 
+   //  💯 Next step: Instead of passing the type "div" or "span" to the React.createElement API call, we pass...
+    // TADA our function like this: 
+    // {React.createElement(message, {children: "hello World"})}
+      // {React.createElement(message, {children: "Good bye"})}
+    // (NOTE: this method does not create an element in the DOM node, it just calls a function that creates an element)
     const element = (
-      <div className="container">
-       {React.createElement(message, {children: "Hello there beutiful"})}
-       {React.createElement(message, {children: "Goodbye World"})}
-      </div>
+     <>
+     <Message subject="We have landed" greeting="Hej"  />
+     <Message  subject="snygging" greeting="Hello"/>
+      </>
     )
 
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
      ReactDOM.createRoot(document.getElementById('root')).render(element)
+    //  ReactDOM.render(element, document.getElementById("root"))
+
+ 
    
   </script>
 </body>
